--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h3>Projects:</h3>
         <ul>
             <li>
-                <a target="_blank" href="index.html"
-                    >First Project
+                <a target="_blank" href="gitHubProfileSearch/githubProfile.html"
+                    >GitHub Profile Search Tool
                 </a>
             </li>
         </ul>
